--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -9,8 +9,12 @@ load:
   - ../source/fe.engine.js
   - ../source/fe.model.js
   - ../source/fe.view.js
+  - ../source/fe.element.js
+  - ../source/fe.metadataProvider.js  
   # tests
   - source/fe.tests.js
   - source/fe.engine.tests.js
   - source/fe.model.tests.js
   - source/fe.view.tests.js
+  - source/fe.element.tests.js
+  - source/fe.metadataProvider.tests.js
