--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
 
   <target name="combine" depends="tests">
 
-	<concat destfile="${FE}.testable.js">
+	<concat destfile="${FE}.testable.js" fixlastline="yes" >
       <fileset file="source/fe.js" /> <!--lint,test-->
       <fileset file="source/fe.engine.js" /> <!--lint,test-->
       <fileset file="source/fe.model.js" /> <!--lint,test-->
@@ -31,7 +31,7 @@
       <fileset file="source/fe.metadataProvider.js" /> <!--lint,test-->
 	</concat>
 
-	<concat destfile="${FE}.tests.js"> <!-- to estimate test suit size ;) -->
+	<concat destfile="${FE}.tests.js" fixlastline="yes"> <!-- to estimate test suit size ;) -->
       <fileset file="tests/source/fe.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.engine.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.model.tests.js" /> <!--lint,test-->
@@ -41,7 +41,9 @@
       <fileset file="tests/source/formEngine.tests.js" /> <!--lint,test-->
 	</concat>
 
-	<concat destfile="${FE}.js">
+    <echo message="Creating ${FE}.js..." />
+
+	<concat destfile="${FE}.js" fixlastline="yes">
 	  <fileset file="source/intro.js" />
       <fileset file="${FE}.testable.js" />
 	  <fileset file="source/outro.js" />
