--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,7 @@
 	  <fileset file="extensions/jquery/source/elements/view.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/textBox.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/comboBox.js" /> <!--lint-->
+	  <fileset file="extensions/jquery/source/elements/checkBox.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/outro.js" />
 	</concat>
 
