--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,7 @@
 
 	<concat destfile="${FE}.testable.js" fixlastline="yes" >
       <fileset file="source/fe.js" /> <!--lint,test-->
+      <fileset file="source/fe.rule.js" /> <!--lint,test-->
       <fileset file="source/fe.engine.js" /> <!--lint,test-->
       <fileset file="source/fe.model.js" /> <!--lint,test-->
       <fileset file="source/fe.view.js" /> <!--lint,test-->
@@ -33,6 +34,7 @@
 
 	<concat destfile="${FE}.tests.js" fixlastline="yes"> <!-- to estimate test suit size ;) -->
       <fileset file="tests/source/fe.tests.js" /> <!--lint,test-->
+      <fileset file="tests/source/fe.rule.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.engine.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.model.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.view.tests.js" /> <!--lint,test-->
