--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -10,6 +10,7 @@ load:
   - ../source/fe.trigger.js
   - ../source/fe.engine.js
   - ../source/fe.model.js
+  - ../source/fe.validators.js
   - ../source/fe.view.js
   - ../source/fe.element.js
   - ../source/fe.metadataProvider.js
@@ -18,6 +19,7 @@ load:
   - ../tests/source/fe.trigger.tests.js
   - ../tests/source/fe.engine.tests.js
   - ../tests/source/fe.model.tests.js
+  - ../tests/source/fe.validators.tests.js
   - ../tests/source/fe.view.tests.js
   - ../tests/source/fe.element.tests.js
   - ../tests/source/fe.metadataProvider.tests.js
