--- a/build.xml
+++ b/build.xml
@@ -72,6 +72,7 @@
 	  <fileset file="extensions/jquery/source/elements/checkBox.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/toolBar.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/button.js" /> <!--lint-->
+	  <fileset file="extensions/jquery/source/elements/label.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/outro.js" />
 	</concat>
     <replaceregexp match="@VERSION" replace="${version}" flags="g" byline="true"
