--- a/build.xml
+++ b/build.xml
@@ -75,6 +75,8 @@
 	  <fileset file="extensions/jquery/source/elements/toolBar.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/button.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/elements/label.js" /> <!--lint-->
+	  <fileset file="extensions/jquery/source/elements/panel.js" /> <!--lint-->
+	  <fileset file="extensions/jquery/source/elements/header.js" /> <!--lint-->
 	  <fileset file="extensions/jquery/source/outro.js" />
 	</concat>
     <replaceregexp match="@VERSION" replace="${version}" flags="g" byline="true"
