--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
       <fileset file="source/fe.rule.js" /> <!--lint,test-->
       <fileset file="source/fe.trigger.js" /> <!--lint,test-->
       <fileset file="source/fe.engine.js" /> <!--lint,test-->
+      <fileset file="source/fe.validationRule.js" /> <!--lint,test-->
       <fileset file="source/fe.model.js" /> <!--lint,test-->
       <fileset file="source/fe.validators.js" /> <!--lint,test-->      
       <fileset file="source/fe.view.js" /> <!--lint,test-->
@@ -46,6 +47,7 @@
       <fileset file="tests/source/fe.trigger.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.engine.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.model.tests.js" /> <!--lint,test-->
+      <fileset file="tests/source/fe.validationRule.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.validators.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.view.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.element.tests.js" /> <!--lint,test-->
