--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
       <fileset file="source/fe.js" /> <!--lint,test-->
       <fileset file="source/fe.dsl.js" /> <!--lint,test-->      
       <fileset file="source/fe.rule.js" /> <!--lint,test-->
-      <fileset file="source/fe.trigger.js" /> <!--lint,test-->
+      <fileset file="source/fe.triggers.js" /> <!--lint,test-->
       <fileset file="source/fe.engine.js" /> <!--lint,test-->
       <fileset file="source/fe.validationRule.js" /> <!--lint,test-->
       <fileset file="source/fe.model.js" /> <!--lint,test-->
@@ -47,7 +47,7 @@
       <fileset file="tests/source/fe.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.dsl.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.rule.tests.js" /> <!--lint,test-->
-      <fileset file="tests/source/fe.trigger.tests.js" /> <!--lint,test-->
+      <fileset file="tests/source/fe.triggers.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.engine.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.model.tests.js" /> <!--lint,test-->
       <fileset file="tests/source/fe.validationRule.tests.js" /> <!--lint,test-->
