--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -8,7 +8,7 @@ load:
   - ../source/fe.js
   - ../source/fe.dsl.js
   - ../source/fe.rule.js
-  - ../source/fe.trigger.js
+  - ../source/fe.triggers.js
   - ../source/fe.engine.js
   - ../source/fe.validationRule.js
   - ../source/fe.model.js
@@ -21,7 +21,7 @@ load:
   - ../tests/source/fe.tests.js
   - ../tests/source/fe.dsl.tests.js
   - ../tests/source/fe.rule.tests.js
-  - ../tests/source/fe.trigger.tests.js
+  - ../tests/source/fe.triggers.tests.js
   - ../tests/source/fe.engine.tests.js
   - ../tests/source/fe.model.tests.js
   - ../tests/source/fe.validationRule.tests.js
